Changes after 2.5.1 release:

- CPU
  - Implemented EPT A/D extensions support.
    Bochs is fully aligned with the latest published revision of
    Intel Architecture Manual (revision 043) now.
  - Another 10% CPU emulation speedup with even more optimal lazy flags
    handling and stack access optimizations
  - Support for AMD's SVM hardware emulation in Bochs CPU, to enable
    configure with --enable-svm option
  - Implemented AMD Extended XAPIC support, to enable set .bochsrc CPU
    APIC option to 'xapic_ext'
  ! Added Corei5 750 (Lynnfield) configuration to the CPUDB
  ! Added Turion64 (Tyler) configuration to the CPUDB
  ! Added AMD Phenom X3 8650 (Toliman) configuration to the CPUDB
  ! Added Corei7 3770K (Ivy Bridge) configuration to the CPUDB
  - Bugfixes for CPU emulation correctness and stability
    (critical fixes in APIC/X2APIC, VMX and AVX/XOP emulation)

- Bochs Debugger and Instrumentation
  - Implemented new debugger command 'info device [string]' that shows the
    state of the device specified in 'string'
  - Improved debug dump for ne2k, pci, pic and vga/cirrus devices. Added
    debug dump for pci2isa, i/o apic, cmos, pit, floppy and dma devices.
  - Added TLB to CPU param tree - now it can be browsed from Bochs internal
    debugger and Bochs debugger GUI through param tree interfaces
  - Implemented 'writemem' debugger command to dump virtual memory block
    starting from selected linear address into a file
  - Updated definition of instrumentation callbacks, see description in
    instrumentation.txt / Fixed instrumentation examples

- Configure and compile
  - Moved networking, sound and USB devices to subdirectories in iodev.
  - Moved MWAIT_IS_NOP .bochsrc option from CPUID to CPU so it can be set
    even if cpu was configured using pre-defined CPUDB profile.
  - pcidev: enable support for Linux kernel 3.x (Debian patch by Guillem Jover)
  - Added new parameter 'rtc_sync' for the 'clock' option. If this option