@@ -40,6 +40,7 @@ cpuid
   sse4a
   aes
   movbe
+  adx
   xsave
   xsaveopt
   svm
