@@ -513,6 +513,10 @@ void bx_init_options()
       "Support for MOVBE instruction",
       0);
   new bx_param_bool_c(cpuid_param,
+      "adx", "Support for ADX instructions",
+      "Support for ADCX/ADOX instructions",
+      0);
+  new bx_param_bool_c(cpuid_param,
       "aes", "Support for AES instruction set",
       "Support for AES instruction set",
       0);
@@ -2529,6 +2533,10 @@ static int parse_line_formatted(const char *context, int num_params, char *param
         if (parse_param_bool(params[i], 6, BXPN_CPUID_MOVBE) < 0) {
           PARSE_ERR(("%s: cpuid directive malformed.", context));
         }
+      } else if (!strncmp(params[i], "adx=", 4)) {
+        if (parse_param_bool(params[i], 4, BXPN_CPUID_ADX) < 0) {
+          PARSE_ERR(("%s: cpuid directive malformed.", context));
+        }
       } else if (!strncmp(params[i], "sep=", 4)) {
         if (parse_param_bool(params[i], 4, BXPN_CPUID_SEP) < 0) {
           PARSE_ERR(("%s: cpuid directive malformed.", context));
@@ -3511,7 +3519,7 @@ int bx_write_configuration(const char *rc, int overwrite)
       SIM->get_param_enum(BXPN_CPUID_APIC)->get_selected());
 #endif
 #if BX_CPU_LEVEL >= 6
-    fprintf(fp, ", sse=%s, sse4a=%d, sep=%d, aes=%d, xsave=%d, xsaveopt=%d, movbe=%d, smep=%d",
+    fprintf(fp, ", sse=%s, sse4a=%d, sep=%d, aes=%d, xsave=%d, xsaveopt=%d, movbe=%d, adx=%d, smep=%d",
       SIM->get_param_enum(BXPN_CPUID_SSE)->get_selected(),
       SIM->get_param_bool(BXPN_CPUID_SSE4A)->get(),
       SIM->get_param_bool(BXPN_CPUID_SEP)->get(),
@@ -3519,6 +3527,7 @@ int bx_write_configuration(const char *rc, int overwrite)
       SIM->get_param_bool(BXPN_CPUID_XSAVE)->get(),
       SIM->get_param_bool(BXPN_CPUID_XSAVEOPT)->get(),
       SIM->get_param_bool(BXPN_CPUID_MOVBE)->get(),
+      SIM->get_param_bool(BXPN_CPUID_ADX)->get(),
       SIM->get_param_bool(BXPN_CPUID_SMEP)->get());
 #if BX_SUPPORT_AVX
     fprintf(fp, ", avx=%d, avx_f16c=%d, avx_fma=%d, bmi=%d, xop=%d, tbm=%d, fma4=%d", 
