@@ -255,6 +255,11 @@ movbe:
 Select MOVBE Intel(R) Atom instruction support.
 This option exists only if Bochs compiled with BX_CPU_LEVEL >= 6.
 
+adx:
+
+Select ADCX/ADOX instructions support.
+This option exists only if Bochs compiled with BX_CPU_LEVEL >= 6.
+
 xsave:
 
 Select XSAVE extensions support.
